[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driverutil"
description = ""
readme = "README.md"
requires-python = ">=3.11"
keywords = []
authors = [
  { name = "Johann Chang", email = "mr.changyuheng@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "PyInstaller",
]
dynamic = ["version"]

[project.scripts]
driverutil = "driverutil.cli:main"

[tool.hatch.version]
path = "driverutil/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=driverutil --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "driverutil/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
